--- a/requirements.txt
+++ b/requirements.txt
@@ -2,28 +2,43 @@ alembic==1.16.4
 asgiref==3.7.2
 bcrypt==4.1.2
 blinker==1.9.0
+certifi==2025.7.14
+charset-normalizer==3.4.2
 click==8.2.1
+contourpy==1.3.3
+cycler==0.12.1
 Flask==3.0.0
 Flask-Cors==4.0.0
 Flask-JWT-Extended==4.5.3
 Flask-Migrate==4.0.5
 Flask-SQLAlchemy==3.1.1
+fonttools==4.59.0
 greenlet==3.2.3
 h11==0.16.0
+idna==3.10
 itsdangerous==2.2.0
 Jinja2==3.1.6
-ledger-cli-toolkit==1.2.0
+kiwisolver==1.4.8
+ledger-cli-toolkit==1.5.3
 Mako==1.3.10
 MarkupSafe==3.0.2
 marshmallow==3.20.1
 marshmallow-sqlalchemy==0.29.0
+matplotlib==3.10.3
+numpy==2.3.2
 packaging==25.0
+pillow==11.3.0
 psycopg2-binary==2.9.9
 PyJWT==2.10.1
+pyparsing==3.2.3
+python-dateutil==2.9.0.post0
 python-dotenv==1.0.0
-requests==2.31.0
+PyYAML==6.0.2
+requests==2.32.4
+six==1.17.0
 SQLAlchemy==2.0.42
 tabulate==0.9.0
 typing_extensions==4.14.1
+urllib3==2.5.0
 uvicorn==0.24.0
 Werkzeug==3.1.3
